[package]
name    = "BGB2HTTP"
version = "0.1.0"
authors = ["Selenologist <selenologist@users.noreply.github.com>"]

[dependencies]
futures       = "0.1"
hyper         = "0.11"
tokio-core    = "0.1"
tokio-proto   = "0.1.1"
tokio-service = "0.1.0"
base64        = "~0.6.0"
clap          = "2.31.2"
log           = "0.4.1"
env_logger    = "0.5.5"
byteorder     = "1"
